--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ header {
 	display: inline-block;
 	align-items: center;
 	justify-content: space-between;
-	padding: 20px;
+	padding-top: 20px;
 }
 
 .logo img {
@@ -34,6 +34,13 @@ nav ul li a {
 
 nav ul li a:hover{
 	color:#a0a0a0
+}
+
+hr {
+	width: 100%;
+	/* height: 1px; */
+	color: #000000;
+	background-color: #000000;
 }
 
 body {
@@ -120,6 +127,17 @@ a {
 	display: inline-block; 
 }
 
+.nebula-text{ 
+	width: 100%;
+	margin: 0 auto;
+	display: inline-block;
+	font-size: clamp( 1rem, 3vw, 1.5rem);
+	text-align: center;
+	text-decoration: none;
+	font-weight: 600;
+	/* padding-top: 5%;  */
+}
+
 .quarry {
 	width: 90%; 
 	margin: 0 auto;
@@ -134,18 +152,40 @@ a {
 	display: inline-block; 
 }
 
-.a {
+.quarry-text{ 
+	width: 100%;
+	margin: 0 auto;
+	display: inline-block;
+	font-size: clamp( 1rem, 3vw, 1.5rem);
+	text-align: center;
+	text-decoration: none;
+	font-weight: 600;
+	/* padding-top: 5%;  */
+}
+
+.ripples {
 	width: 90%; 
 	margin: 0 auto;
 	display: inline-block; 
 }
 
-.a img {
+.ripples img {
 	width: 100%;
 	max-height: 800px;
 	/* height: 1080px; */
 	object-fit: cover;
 	display: inline-block; 
+}
+
+.ripples-text{ 
+	width: 100%;
+	margin: 0 auto;
+	display: inline-block;
+	font-size: clamp( 1rem, 3vw, 1.5rem);
+	text-align: center;
+	text-decoration: none;
+	font-weight: 600;
+	/* padding-top: 5%;  */
 }
 
 .background {
