--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ header {
 	display: inline-block;
 	align-items: center;
 	justify-content: space-between;
-	padding-top: 20px;
+	padding-top: 2vh;
+	padding-bottom: 2vh;
 }
 
 .logo img {
@@ -66,9 +67,9 @@ img {
 
 .creaciones img {
 	width: 100%;
-	max-height: 800px;
+	max-height: 50vh;
 	/* height: 1080px; */
-	object-fit: cover;
+	object-fit: contain;
 	display: inline-block; 
 }
 
@@ -123,7 +124,7 @@ a {
 	width: 100%;
 	max-height: 800px;
 	/* height: 1080px; */
-	object-fit: cover;
+	object-fit: contain;
 	display: inline-block; 
 }
 
@@ -148,7 +149,7 @@ a {
 	width: 100%;
 	max-height: 800px;
 	/* height: 1080px; */
-	object-fit: cover;
+	object-fit: contain;
 	display: inline-block; 
 }
 
@@ -173,7 +174,7 @@ a {
 	width: 100%;
 	max-height: 800px;
 	/* height: 1080px; */
-	object-fit: cover;
+	object-fit: contain;
 	display: inline-block; 
 }
 
@@ -191,7 +192,7 @@ a {
 .background {
 	/* width: 100%; */
 	height: 80vh;
-	background-position: 60%;
+	background-position: 64%;
 	background-image: url("images/background.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
