--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ nav ul li a:hover{
 
 hr {
 	width: 100%;
-	/* height: 1px; */
+	height: .1px;
 	color: #000000;
 	background-color: #000000;
 }
@@ -91,7 +91,7 @@ img {
 	display: inline-block;
 	text-align: center;
 	height: 200px;
-	padding-top: 2%;
+	padding-top: 5%;
 }
 
 .contact {
@@ -196,4 +196,14 @@ a {
 	background-image: url("images/background.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
+	}
+
+	h5 {
+		margin: .25rem;
+		padding: .25rem;
+	}
+
+	h3 {
+		margin: .25rem;
+		padding: .25rem;
 	}
