--- a/styles.css
+++ b/styles.css
@@ -84,10 +84,9 @@ hr {
 
 .hamburger {
   position: absolute;
-  top: 10vh;
+  top: 5.3vh;
   right: 3vh;
-  margin-left: -2em;
-  margin-top: -45px;
+  margin: auto;
   width: 2em;
   height: 45px;
   z-index: 5;
@@ -99,7 +98,7 @@ hr {
   height: 2px;
   border-radius: 1px;
   background-color: #000000;
-  margin-top: 8px;
+  margin-bottom: 8px;
   transition: all 0.2s ease-in-out;
 }
 
