--- a/styles.css
+++ b/styles.css
@@ -327,7 +327,7 @@ a {
 	/* width: 100%; */
 	height: 80vh;
 	background-position: 64%;
-	background-image: url("images/background.jpg");
+	background-image: url("images/background_2.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	}
