--- a/styles.css
+++ b/styles.css
@@ -189,13 +189,13 @@ img {
 
 /* Paginas */
 
-.creaciones {
+.coleccion {
 	width: 95%; 
 	margin: 0 auto;
 	display: inline-block; 
 }
 
-.creaciones img {
+.coleccion img {
 	width: 100%;
 	max-height: 50vh;
 	/* height: 1080px; */
@@ -246,13 +246,13 @@ a {
     text-decoration: none;
 }
 
-.nebula {
-	width: 95%; 
+.producto {
+	width: 70%; 
 	margin: 0 auto;
 	display: inline-block; 
 }
 
-.nebula img {
+.producto img {
 	width: 100%;
 	max-height: 800px;
 	/* height: 1080px; */
@@ -260,57 +260,7 @@ a {
 	display: inline-block; 
 }
 
-.nebula-text{ 
-	width: 100%;
-	margin: 0 auto;
-	display: inline-block;
-	font-size: clamp( 1rem, 3vw, 1rem);
-	text-align: center;
-	text-decoration: none;
-	font-weight: 600;
-	/* padding-top: 5%;  */
-}
-
-.quarry {
-	width: 90%; 
-	margin: 0 auto;
-	display: inline-block; 
-}
-
-.quarry img {
-	width: 100%;
-	max-height: 800px;
-	/* height: 1080px; */
-	object-fit: contain;
-	display: inline-block; 
-}
-
-.quarry-text{ 
-	width: 100%;
-	margin: 0 auto;
-	display: inline-block;
-	font-size: clamp( 1rem, 3vw, 1rem);
-	text-align: center;
-	text-decoration: none;
-	font-weight: 600;
-	/* padding-top: 5%;  */
-}
-
-.ripples {
-	width: 90%; 
-	margin: 0 auto;
-	display: inline-block; 
-}
-
-.ripples img {
-	width: 100%;
-	max-height: 800px;
-	/* height: 1080px; */
-	object-fit: contain;
-	display: inline-block; 
-}
-
-.ripples-text{ 
+.producto-text{ 
 	width: 100%;
 	margin: 0 auto;
 	display: inline-block;
