--- a/styles.css
+++ b/styles.css
@@ -301,7 +301,7 @@ a {
 	text-align: center;
 	text-decoration: none;
 	font-weight: 600;
-	/* padding-top: 5%;  */
+	padding-bottom: 3vh; 
 }
 
 /* Background */
