--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ img {
 	width: 100%;
 	max-height: 40vh;
 	object-fit: cover;
-	display: inline-block; 
+	/* display: inline-block;  */
 }
 
 /* .de_la_luna img {
